DEAL-1222: UI shifts due to longer French words (fixed screenshots #10)

--- a/Client/DealnetPortal.Web/Content/less/components/forms.less
+++ b/Client/DealnetPortal.Web/Content/less/components/forms.less
@@ -147,6 +147,9 @@ html.ie9{
   .form-section{
     .dealnet-middle-header{
       margin-bottom: 15px;
+      @media @mobile {
+        padding-right: 15px;
+      }
     }
     @media @tablet-down {
       max-width: 528px;
@@ -165,6 +168,7 @@ html.ie9{
     }
   }
 }
+
 
 .custom-checkbox{
   position: relative;
